--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "cookie-parser": "1.4.*",
     "cors": "2.8.*",
     "element-ui": "^2.4.11",
-    "express": "4.14.*",
-    "express-session": "1.14.*",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "fabric-ca-client": "1.0.5",
     "fabric-client": "1.0.5",
-    "grpc": "1.10.1",
+    "grpc": "^1.21.1",
     "pug": "2.0.3",
     "serve-static": "1.13.*",
     "winston": "2.4.*",
