--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "compression": "1.7.*",
     "cookie-parser": "1.4.*",
     "cors": "2.8.*",
+    "echarts": "^4.2.1",
+    "echarts-stat": "^1.1.1",
     "element-ui": "^2.4.11",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
